never forget the --flannel-iface

--- a/P2/Vagrantfile
+++ b/P2/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
   nodes = {
     "ytayaS"  => { ip: "192.168.56.110", script: "Provision/controller.sh" },
-    # "ytayaSW" => { ip: "192.168.56.111", script: "Provision/worker.sh"}
+    "ytayaSW" => { ip: "192.168.56.111", script: "Provision/worker.sh"}
   }
 
   config.vm.box = "bento/almalinux-8"
