--- a/P2/Configs/ingress.yaml
+++ b/P2/Configs/ingress.yaml
@@ -4,6 +4,8 @@ metadata:
   name: app-ingress
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web
+    traefik.ingress.kubernetes.io/priority: "1"
+
 spec:
   rules:
   - host: app1.com
@@ -26,7 +28,7 @@ spec:
             name: app2
             port:
               number: 80
-  - host: 
+  - host:
     http:
       paths:
       - path: /
