--- a/P2/Configs/app-one.yml
+++ b/P2/Configs/app-one.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app2
+  name: app-one
 spec:
-  replicas: 3 # Set 3 replicas as required
+  replicas: 1
   selector:
     matchLabels:
-      app: app2
+      app: app-one
   template:
     metadata:
       labels:
-        app: app2
+        app: app-one
     spec:
       containers:
-      - name: app2
+      - name: app-one
         image: nginx:alpine
         ports:
         - containerPort: 80
@@ -23,24 +23,25 @@ spec:
       volumes:
       - name: html
         configMap:
-          name: app2-html
+          name: app-one-html
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app2-html
+  name: app-one-html
 data:
   index.html: |
-    <h1>Welcome to App2!</h1>
+    <h1>Welcome to App1!</h1>
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app2
+  name: app-one
 spec:
   selector:
-    app: app2
+    app: app-one
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
+
