--- a/P2/Configs/app-two.yml
+++ b/P2/Configs/app-two.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app1
+  name: app-two
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: app1
+      app: app-two
   template:
     metadata:
       labels:
-        app: app1
+        app: app-two
     spec:
       containers:
-      - name: app1
+      - name: app-two
         image: nginx:alpine
         ports:
         - containerPort: 80
@@ -23,25 +23,24 @@ spec:
       volumes:
       - name: html
         configMap:
-          name: app1-html
+          name: app-two-html
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app1-html
+  name: app-two-html
 data:
   index.html: |
-    <h1>Welcome to App1!</h1>
+    <h1>Welcome to App2!</h1>
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app1
+  name: app-two
 spec:
   selector:
-    app: app1
+    app: app-two
   ports:
   - protocol: TCP
     port: 80
     targetPort: 80
-
