--- a/Bonus/Vagrantfile
+++ b/Bonus/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure("2") do |config|
   nodes = {
-    "ytayaS"  => { ip: "192.168.56.112", script: "Provision/controller.sh" },
+    "Gitlab"  => { ip: "192.168.56.110", script: "Provision/controller.sh" },
   }
 
   config.vm.box = "bento/almalinux-8"
@@ -12,8 +12,8 @@ Vagrant.configure("2") do |config|
       node.vm.network "private_network", ip: opts[:ip]
 
       node.vm.provider "virtualbox" do |vb|
-        vb.memory = 1024
-        vb.cpus = 1
+        vb.memory = 4096
+        vb.cpus = 4
         vb.gui = false
       end
 
