--- a/Bonus/P3/Confs/applications.yaml
+++ b/Bonus/P3/Confs/applications.yaml
@@ -6,28 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://gitlab.local/root/inception-app.git
-    targetRevision: main
-    path: v1
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: dev
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - CreateNamespace=true
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: playground-app-v2
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://gitlab.local/root/inception-app.git
+    repoURL: https://192.168.56.110/root/inception-app.git
     targetRevision: main
     path: v2
   destination:
@@ -39,4 +18,3 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
-
