--- a/P1/Vagrantfile
+++ b/P1/Vagrantfile
@@ -4,7 +4,7 @@ Vagrant.configure("2") do |config|
     "ytayaSW" => { ip: "192.168.56.111", script: "Provision/worker.sh" }
   }
 
-  config.vm.box = "bento/almalinux-8"
+  config.vm.box = "bento/ubuntu-22.04"
   config.vm.synced_folder ".", "/vagrant", disabled: true
 
   nodes.each do |name, opts|
