--- a/P3/Confs/ingress_argocd.yml
+++ b/P3/Confs/ingress_argocd.yml
@@ -8,12 +8,14 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`argocd.local`)
+      match: HostRegexp(`{host:.+}`)
+      priority: 10
       services:
         - name: argocd-server
           port: 80
     - kind: Rule
-      match: Host(`argocd.local`) && Header(`Content-Type`, `application/grpc`)
+      match: HostRegexp(`{host:.+}`) && Header(`Content-Type`, `application/grpc`)
+      priority: 11
       services:
         - name: argocd-server
           port: 80
