--- a/P3/Confs/applications.yaml
+++ b/P3/Confs/applications.yaml
@@ -1,10 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
+kind: AppProject
+metadata:
+  name: development
+  namespace: argocd
+spec:
+  sourceRepos:
+    - https://github.com/0xTheFr34k/inception-app.git  # allow this repo
+  destinations:
+  - namespace: '*'
+    server: '*'
+  clusterResourceWhitelist:
+    - group: '*'
+      kind: '*'
+---
+apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: playground-app-v1
   namespace: argocd
 spec:
-  project: default
+  project: development
   source:
     repoURL: https://github.com/0xTheFr34k/inception-app.git
     targetRevision: main
@@ -18,25 +33,3 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
----
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: playground-app-v2
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/0xTheFr34k/inception-app.git
-    targetRevision: main
-    path: v2
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: dev
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
-    syncOptions:
-    - CreateNamespace=true
-
